...

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                        <LinearLayout
                            android:id="@+id/addExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                            <LinearLayout
                                android:id="@+id/linearLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <EditText
                                    android:id="@+id/expenseText"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
...

                            <LinearLayout
                                android:id="@+id/linearLayout2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <Spinner
                                    android:id="@+id/descriptionCombo"
                                    android:layout_width="143dp"
                                    android:layout_height="wrap_content"
...

                                <Button
                                    android:id="@+id/addDescButton"
                                    style="?android:attr/buttonStyleSmall"
                                    android:layout_width="wrap_content"
...

                            <LinearLayout
                                android:id="@+id/linearLayout3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <Button
                                    android:id="@+id/dateButton"
                                    android:layout_width="90dp"
                                    android:layout_height="match_parent"
...

                            <Button
                                android:id="@+id/saveButton"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
...

                            <LinearLayout
                                android:id="@+id/linearLayout4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <EditText
                                    android:id="@+id/incomeField"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/balanceView"
                                android:layout_width="wrap_content"
                                android:layout_height="26dp"
...

                            <Button
                                android:id="@+id/editButton"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
...
