...
    <string name="select_an_expense_and_year">Select an Expense and Year</string>
    <string name="calculate">Calculate</string>
    <string name="month">Month:</string>
    <string name="or">% or £</string>
    <string name="pound">£</string>
    <string name="percent">%</string>
    <string name="search_by_description">Search by Description</string>
    <string name="enter_description"><font size="14">Enter description</font></string>
    <string name="enter_amount"><font size="14">Enter amount</font></string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_an_expense">Add an Expense:</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_description">Description</string>
    <string name="add">Add</string>
    <string name="select_date">Select Date</string>
    <string name="end_date">End Date</string>
    <string name="save_to_file">Save To File</string>
    <string name="add_your_income">Add your income:</string>
    <string name="enter_your_income">Enter your income:</string>
    <string name="income_circle">Income Circle</string>
    <string name="balance">Balance:</string>
    <string name="edit_an_expense">Edit an expense:</string>
    <string name="add_expenses_using_date_range">Add expenses using date range:</string>
...
