...
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

    <!-- 600width  935height-->
    <RelativeLayout
        android:id="@+id/editView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
...
            android:layout_gravity="end"
            android:background="#0000"
            android:src="@drawable/ic_info_outline_black_24dp"
            tools:ignore="contentDescription" />

        <EditText
            android:id="@+id/searchByDescText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/enter_description"
            android:inputType="text"
...
